--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFanlsF6f1i1p9Rc4D3tWh",
+      "authorship_tag": "ABX9TyO4DMHu8yQwyB6KBldyzk61",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,7 +179,7 @@
       "cell_type": "code",
       "source": [
         "# Compile model\n",
-        "\n",
+        "# used adam optimizer\n",
         "model.compile(optimizer='adam', loss='mean_squared_error', metrics=['accuracy'])# specify the optimizer ,loss and metrics for accuracy."
       ],
       "metadata": {
