--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4DMHu8yQwyB6KBldyzk61",
+      "authorship_tag": "ABX9TyOhpTADXq23D24ncq+LnvsK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,7 @@
       "source": [
         "# Compile model\n",
         "# used adam optimizer\n",
+        "# metric is on accuracy.\n",
         "model.compile(optimizer='adam', loss='mean_squared_error', metrics=['accuracy'])# specify the optimizer ,loss and metrics for accuracy."
       ],
       "metadata": {
