--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhpTADXq23D24ncq+LnvsK",
+      "authorship_tag": "ABX9TyMhuTyPC3QGxE5lvdAOb9V1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Generate simple data\n",
+        "# Generate simple data of 100 characters\n",
         "x = np.linspace(-10, 10, 100)\n",
         "y = 2 * x + 1 + np.random.randn(*x.shape) * 2  # noisy linear data\n",
         "x = x.reshape(-1, 1) * 2 # simple function with some noises\n",
