--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhuTyPC3QGxE5lvdAOb9V1",
+      "authorship_tag": "ABX9TyNGVdLOJYdFlHwrKyFUlvGB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,7 @@
         "print(f\"Training loss: {loss:.4f}\")# prints the evaluation.\n",
         "\n",
         "# training the model.\n",
-        "# reduce epochs if necessary"
+        "# reduce epochs if necessary to prevent overfitting."
       ],
       "metadata": {
         "colab": {
