--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGVdLOJYdFlHwrKyFUlvGB",
+      "authorship_tag": "ABX9TyM9Gbz1SCS0IAcC9e8R93ZB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,7 @@
         "# save the figure.\n",
         "plt.savefig('x_y_plot.png', dpi=300, bbox_inches='tight')# saving figure in collab.\n",
         "plt.show()# showing the data.\n",
+        "#awesome\n",
         "from google.colab import files\n",
         "files.download('x_y_plot.png') #save file as png."
       ],
