--- a/Simple_neural_network_in_google_collab.ipynb
+++ b/Simple_neural_network_in_google_collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9Gbz1SCS0IAcC9e8R93ZB",
+      "authorship_tag": "ABX9TyOeIJQxnHF+DEaI3/cu+KEY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
       "outputs": [],
       "source": [
         "# TensorFlow is usually preinstalled, but let's ensure it's up to date\n",
+        "#so simple\n",
         "!pip install tensorflow -q\n"
       ]
     },
